# rdrscrape

./: Cargo.toml  OUTPUT_SHAPE.md  README.md
man/: rdrscrape.1
schema/: book.json
src/: cli.rs  config.rs  formats.rs  lib.rs  main.rs  model.rs
src/epub/: mod.rs
src/scraper/: client.rs  error.rs  mod.rs  royalroad.rs  scribblehub.rs
