[package]
name = "rdrscrape"
version = "0.1.0"
edition = "2021"
description = "CLI scraper for Royal Road and Scribble Hub fiction, outputting EPUB"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
toml = "0.8"
zip = "2.2"
html2md = "0.2"
indicatif = "0.17"
